Work around bug in NJsonSchema
When schema had two-dimensional array (such as ProcPathInfo), the generated typescript
code did not properly call the constructor to create ProcPathInfo.  Work around it
by adding an intermediate structure ProcessInfo.
