# server/machine-watch-swagger.json
@@ -1135,10 +1135,7 @@
         "ProcsAndPaths": {
           "type": "array",
           "items": {
-            "type": "array",
-            "items": {
-              "$ref": "#/definitions/ProcPathInfo"
-            }
+            "$ref": "#/definitions/ProcessInfo"
           }
         }
       }
@@ -1211,6 +1208,26 @@
           "type": "boolean"
         }
       }
+    },
+    "ProcessInfo": {
+      "type": "object",
+      "additionalProperties": false,
+      "required": [
+        "paths"
+      ],
+      "properties": {
+        "paths": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ProcPathInfo"
+          }
+        }
+      },
+      "allOf": [
+        {
+          "$ref": "#/definitions/ValueType"
+        }
+      ]
     },
     "ProcPathInfo": {
       "type": "object",
